# BSIE

./: .gitignore  CLAUDE.md  INDEX.md  api_contract.md  classification_pipeline.md  decisions_v2.md  error_taxonomy.md  human_review_workflow.md  json_schema_v2.md  pipeline_state_machine_v2.md  prd_v2.md  pyproject.toml  template_adapter_v2.md  template_builder_agent.md  testing_strategy.md  vllm_review_loop.md
.claude/commands/: nextsprint.md
config/: app.toml
docs/plans/: 2026-01-08-p0-implementation.md
fixtures/templates/: chase_checking_personal_v1.toml
src/bsie/: __init__.py  __main__.py  config.py
src/bsie/api/: __init__.py  app.py  deps.py
src/bsie/db/: __init__.py  base.py  engine.py
src/bsie/schemas/: __init__.py  base.py  classification.py  errors.py  extraction.py  ingest.py  (+7 more)
templates/chase/: checking_personal_v1.toml
tests/: __init__.py  conftest.py  test_config.py  test_storage.py  test_utils.py
tests/api/: test_app.py  test_deps.py  test_health.py  test_statements.py
tests/db/: test_engine.py  test_models.py  test_template_model.py
tests/schemas/: test_base.py  test_classification.py  test_errors.py  test_extraction.py  test_final_transactions.py  test_human_review.py  test_ingest.py  test_pipeline_state.py  test_reconciliation.py  test_registry.py  test_routing.py  test_transactions.py
tests/services/: test_ingest.py
tests/state/: __init__.py  test_constants.py  test_controller.py  test_dependencies.py  test_types.py
tests/templates/: test_chase_fixture.py  test_dependencies.py  test_parser.py  test_registry.py  test_schema.py
(+23 files in other folders)
